<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmsTranslator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Send">Send</string>
<<<<<<< HEAD
=======
    
    
    <string name="pref_update_setting">Update Language Settings</string>
    
>>>>>>> 330c7199e160f22798eefc1eb78cd4ec11177a22
    <string name="pref_LangFrom_Key">prefFromKey</string>
    <string name="pref_LangFrom">Language to translate from</string>
    <string name="pref_LangFrom_summary">Set the Language to translate from</string>
    <string name="pref_LangTo_Key">prefToKey</string>
    <string name="pref_LangTo">Language to translate text to</string>
    <string name="pref_LangTo_summary">Set the Language to translate to</string>
<<<<<<< HEAD
    <string name="pref_update_setting">Update Language Settings</string>
    <string name="new_message">New Message</string>
    <string name="user_image">User image</string>
    <string name="title_activity_conversation">ConversationActivity</string>
    <string name="send">Send</string>
=======
    
    <string name="pref_Auto_LangFromKey">AutoPrefFromKey</string>
    <string name="pref_Auto_LangFrom">Auto Choose language From</string>
    <string name="pref_Auto_LangFrom_Summary">Choose automatically the language to translate From</string>
    
    <string name="pref_Auto_LangTo_Key">AutoPrefToKey</string>
    <string name="pref_Auto_LangTo">CAuto Choose language to</string>
    <string name="pref_Auto_LangTo_Summary">Choose automatically the language to translate to</string>
    

    
    
    
    
    
   
>>>>>>> 330c7199e160f22798eefc1eb78cd4ec11177a22

</resources>
