<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_update_setting" >
        <ListPreference
            android:key="@string/pref_LangFrom_Key"
            android:summary="@string/pref_LangFrom_summary"
            android:title="@string/pref_LangFrom" />
        <ListPreference
            android:key="@string/pref_LangTo_Key"
            android:summary="@string/pref_LangTo_summary"
            android:title="@string/pref_LangTo" />
        
        <CheckBoxPreference
                android:key="@string/pref_Auto_LangFromKey"                
                android:title="@string/pref_Auto_LangFrom"    
                android:summary="@string/pref_Auto_LangFrom_Summary"          
          />
          
          <CheckBoxPreference
                android:key="@string/pref_Auto_LangTo_Key"                
                android:title="@string/pref_Auto_LangTo"            
                android:summary="@string/pref_Auto_LangTo_Summary"  
          />
    </PreferenceCategory>

</PreferenceScreen>